# codemonkeys

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  TODO_TESTING_AGENTS.md  coverage.json  pyproject.toml  pyrightconfig.json  test_sandbox_agent.py
.claude/: settings.json
.claude-plugin/: plugin.json
agentpipe/: __init__.py  budget.py  cli.py  display.py  models.py  permissions.py  pipeline.py  registry.py  schema.py  validation.py
agentpipe/graphs/: demo.py  demo2.py  python_new_feature.py  python_quality_gate.py
agentpipe/nodes/: __init__.py  base.py  code_review.py  dependency_audit.py  docs_review.py  git_commit.py  git_new_branch.py  implement_feature.py  python_code_review.py  python_coverage.py  python_dependency_audit.py  python_ensure_tools.py  python_format.py  python_implement_feature.py  python_lint.py  python_plan_feature.py  python_security_audit.py  python_test.py  python_type_check.py  resolve_findings.py  security_audit.py
agentpipe/skills/: __init__.py  docs_review.py  python.py  rust.py
agents/: changelog-reviewer.md  python-file-reviewer.md  python-implementer.md  readme-reviewer.md
codemonkeys/: __init__.py  budget.py  cli.py  display.py  fix.py  permissions.py  pipeline.py  review_and_audit.py  run_agent.py  run_review.py  runner.py  sandbox.py  schemas.py  ui.py
codemonkeys-plugin/.claude-plugin/: plugin.json
codemonkeys-plugin/agents/: python-implementer.md
codemonkeys-plugin/hooks/: branch_guard.py  hooks.json  notification.py  permission_request.py  post_tool_use.py  post_tool_use_failure.py  pre_tool_use.py  session_start.py  stop.py  stop_memory.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
codemonkeys-plugin/shared/: engineering-mindset.md  python-guidelines.md
codemonkeys/agents/: __init__.py  _scope.py  changelog_reviewer.py  changelog_writer.py  fixer.py  project_memory.py  prompt_review.py  python_changelog.py  python_changelog_writer.py  python_code_review.py  python_coverage.py  python_coverage_analyzer.py  python_dep_auditor.py  python_dependency_audit.py  python_docs_review.py  python_file_reviewer.py  (+18 more)
codemonkeys_old/: __init__.py  run_agent.py
docs/: agent-definition.md
examples/: multiagent_review.py
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
langclaude/: __init__.py  budget.py  display.py  permissions.py  pipeline.py  registry.py  validation.py
tests/: test_action_phases.py  test_agent_auditor.py  test_analysis.py  test_architecture_reviewer.py  test_architecture_schemas.py  test_base_unit.py  test_budget.py  test_budget_extra.py  test_characterization_tester.py  test_cli.py  test_compositions.py  test_coverage_gaps.py  test_deep_clean_schemas.py  test_dep_audit_parsers.py  test_diff_coverage.py  test_discovery_phases.py  test_display.py  test_engine.py  test_events.py  test_findings.py  test_formatting.py  test_graphs_chain.py  test_hooks.py  test_implement_workflow.py  test_integration.py  test_interactive_nodes.py  test_live_display.py  test_log_metrics.py  test_logger.py  test_mechanical_phase.py  test_mechanical_schemas.py  test_models.py  test_new_feature_graph.py  test_node_allow_split.py  test_orchestrator.py  test_permissions.py  test_permissions_extra.py  test_pipeline.py  test_pipeline_extra.py  test_progress.py  (+31 more)
tests_old/: conftest.py  test_action_phases.py  test_architecture_reviewer.py  test_audit_schema.py  test_design_review_prompt.py  test_discovery_phases.py  test_engine.py  test_events.py  test_graph.py  test_implement_workflow.py  test_log_metrics.py  test_mechanical_phase.py  test_mechanical_schemas.py  test_memory.py  test_new_events.py  test_pipeline.py  test_resilience_review_prompt.py  test_review_phases.py  test_run_result.py  test_runner.py  test_sandbox.py  test_schemas.py  test_spec_compliance_reviewer.py  test_spec_compliance_schemas.py  test_stabilize_phases.py
(+316 files in other folders)
