[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpipe"
version = "0.1.0"
description = "Deterministic AI pipelines powered by the Claude Agent SDK, with per-node permissions and model selection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FlipYourBits" }]
keywords = ["claude", "agent-sdk", "anthropic", "ai-agents", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "claude-agent-sdk>=0.1.0,<1.0",
    "rich>=13.0,<14",
]

[project.optional-dependencies]
python = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "ruff>=0.5,<1",
    "mypy>=1.10",
]
dev = [
    "agentpipe[python]",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agentpipe = "agentpipe.cli:main"

[project.urls]
Homepage = "https://github.com/FlipYourBits/agentpipe"

[tool.hatch.build.targets.wheel]
packages = ["agentpipe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
