[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemonkeys"
version = "0.3.0"
description = "AI agent workflows powered by the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FlipYourBits" }]
keywords = ["claude", "agent-sdk", "anthropic", "ai-agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "claude-agent-sdk>=0.1.0,<1.0",
    "rich>=14.2.0",
    "textual>=8.0",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
python = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "pip-licenses>=5.0",
    "ruff>=0.5,<1",
]
dev = [
    "codemonkeys[python]",
    "pytest-asyncio>=0.23",
]

[project.scripts]
codemonkeys = "codemonkeys.run_review:main"

[project.urls]
Homepage = "https://github.com/FlipYourBits/codemonkeys"

[tool.hatch.build.targets.wheel]
packages = ["codemonkeys"]

[tool.ruff]
exclude = ["codemonkeys_reference/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
